# newsed_v2

./: README.md  pyproject.toml
newseditor/: CHANGELOG  LICENSE  README.rst  pyproject.toml
newseditor/src/newseditor/: __main__.py  app.py  factories.py
newseditor/src/newseditor/adapters/: __init__.py
newseditor/src/newseditor/adapters/controllers/: main.py
newseditor/src/newseditor/drivers/: __init__.py  toga_app.py
newseditor/src/newseditor/drivers/webapp/: __init__.py  core.py  utils.py
newseditor/src/newseditor/entities/: __init__.py  base.py
newseditor/src/newseditor/use_cases/: __init__.py
newseditor/src/newseditor/webapp/: core.py
