[project]
name = "newsed-v2"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "briefcase>=0.3.24",
]
authors = [
    {name = "Yoel Benítez Fonse", email = "ybenitezf@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Desktop Application",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[project.urls]
Repository = "https://github.com/ybenitezf/newsed_v2"
